# fireblocks-signer-transport

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  env-sample
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  check.yml  release-candidate.yml  release.yml  safety.yml  scheduled.yml  test.yml
src/: error.rs  jwt.rs  lib.rs
src/models/: extra_parameters.rs  mod.rs  transaction_response.rs  transaction_status.rs
tests/: integration.rs
