[package]
name = "fireblocks-signer-transport"
version = "0.1.3"
edition = "2024"
description = "HTTP transport for fireblocks API"
repository = "https://github.com/CarteraMesh/fireblocks-signer-transport"
license = "MIT"
authors = ["gh@cartera-mesh.com"]
documentation = "https://docs.rs/CarteraMesh"
homepage = "https://github.com/CarteraMesh/fireblocks-signer-transport"
keywords = ["solana", "fireblocks", "signer", "blockchain", "crypto"]
categories = ["cryptography::cryptocurrencies" , "api-bindings"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
jsonwebtoken = { version = "9" }
http = { version = "1" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "1" }
sha2 = { version = "0.10" }
rand = { version = "0.9" }
reqwest = { version = "^0.12", features = ["json", "multipart", "blocking"] }
thiserror = "2"
tracing = { version = "0.1" }

[dev-dependencies]
anyhow = { version = "1" }
base64 = { version = "0.22" }
bincode = { version = "1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
tokio = { version = "1", features = [ "full"] }
dotenvy= "0.15"
lazy_static = "1.4.0"
solana-sdk = { version = "2", default-features = false, features = ["full"] }
solana-pubkey = { version = "2" }
solana-rpc-client = {version = "2" }
spl-memo = { version = "6" }
solana-stake-interface = { version = "1", features = ["bincode"] }
solana-native-token = { version = "3" }
